--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/076967cb18.js" crossorigin="anonymous"></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Dan Morriss</title>
 </head>
 <body>
     <header>
+        <div class="row">
+            <a href="index.html" class="col-md-4 logo">
 
+            </a>
+            <div class="col-md-8">
+
+            </div>
+        </div>
     </header>
 
     <section>
@@ -20,7 +29,7 @@
     </section>
     
     <footer>
-        
+
     </footer>
 </body>
 </html>
