--- a/index.html
+++ b/index.html
@@ -55,7 +55,57 @@
                         <h3 class="section-heading uppercase">About Me</h3>
                     </div>
                  </div>
+
+                 <div class="row">
+                    <!-- What do I do? -->
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p>
+                                    I'm a Full Stack Software Developer with a solid background in the music industry I thrive in collaborative environments and possess exceptional problem-solving skills, bringing a unique perspective to my software development work.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <!-- How do I do it? -->
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <p>
+                                    I embrace Agile frameworks to guide my work. I deeply appreciate the harmony between elegant design and the seamless integration of high-speed performance, robust security, and reliability. This results in exceptional user experiences.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Why hire me? -->
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                                <p>
+                                    I possess a swift and efficient approach to building and getting things working across the entire stack. Proficient in communication, I excel within dynamic and enthusiastic teams, while also displaying self-initiative when working independently.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                 </div>
+
             </div>
+
         </div>
     </section>
     
