--- a/index.html
+++ b/index.html
@@ -48,7 +48,74 @@
     </header>
 
     <section class="container-fluid">
-        <div class="row row-table">
+        <div class="row">
+            
+            <!-- Contact Info-->
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">
+                            Personal Info
+                        </h3>
+                    </div>
+                </div>
+
+                <div class="personal-info-item">
+                    <div class="key uppercase">
+                        <p>
+                            Name:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Daniel Morriss
+                        </p>
+                    </div>
+                </div>
+
+                <div class="personal-info-item">
+                    <div class="key uppercase">
+                        <p>
+                            Location:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Marlborough, Wiltshire UK
+                        </p>
+                    </div>
+                </div>
+
+                <div class="personal-info-item">
+                    <div class="key uppercase">
+                        <p>
+                            Phone:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            +447919288949
+                        </p>
+                    </div>
+                </div>
+
+                <div class="personal-info-item">
+                    <div class="key uppercase">
+                        <p>
+                            Email:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            danielmorriss1@gmail.com
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+
+
+            <!-- Three reasons-->
             <div class="col-md-8 bg-color-three-reasons section-column">
                  <div class="row">
                     <div class="col">
