--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
                                 <p>
-                                    I'm a Full Stack Software Developer with a solid background in the music industry I thrive in collaborative environments and possess exceptional problem-solving skills, bringing a unique perspective to my software development work.
+                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as Bootstrap and React.
                                 </p>
                             </div>
                         </div>
@@ -95,13 +95,62 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
-                                    I embrace Agile frameworks to guide my work. I deeply appreciate the harmony between elegant design and the seamless integration of high-speed performance, robust security, and reliability. This results in exceptional user experiences.
+                                    I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python and Django in conjunction with MongoDB to process and present information.
                                 </p>
                             </div>
                         </div>
                     </div>
                 <!-- /row -->
                  </div>
+
+                <!-- Progress bars -->
+                 <div class="row progress-section">
+                    <div class="col">
+                       
+                        <!-- HTML -->
+                        <div class="progress">
+                            <div class="progress-bar" role="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">HTML / HTML5</span>
+                        </div>
+
+                        <!-- CSS -->
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progress-bar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">CSS / CSS3</span>
+                        </div>
+
+                        <!-- JavaScript -->
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progress-bar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
+                                <span class="sr-only">70% complete</span>
+                            </div>
+                            <span class="progress-type">JavaScript / jQuery</span>
+                        </div>
+
+                        <!-- Python -->
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progress-bar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">Python / Django</span>
+                        </div>
+
+                        <!-- SQL -->
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progress-bar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">SQL / NoSQL</span>
+                        </div>
+
+                    </div>
+                <!-- / progress bars -->
+                 </div>
+
             <!-- /my skills -->
             </div>
         <!-- /row -->
