Add timeline to resume.html

--- a/resume.html
+++ b/resume.html
@@ -51,16 +51,36 @@
         <div class="row">
             
             <!-- Work History -->
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
+                <!-- title -->
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">
+                        <h3 class="history-heading uppercase">
                             Work History
                         </h3>
                     </div>
                 </div>
+                
+                <!-- Timeline -->
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="04/2022 - Present">
+                        <h4>Freelance Music Tutor</h4>
+                        <p>Online</p>
+                    </div>
+                    <div class="timeline-item" data-dates="10/2019 - 04/2022">
+                        <h4>Electric Guitar Tutor</h4>
+                        <p>Cheam School</p>
+                    </div>
+                    <div class="timeline-item" data-dates="08/2016 - 10/2019">
+                        <h4>Session Musician</h4>
+                        <p>Touring & Studio</p>
+                    </div>
+                    <div class="timeline-item" data-dates="01/2006 - 08/2016">
+                        <h4>Band Member</h4>
+                        <p>Echotape (bassist)</p>
+                    </div>
+                </div>
             </div>
-
 
             <!-- My Skills -->
             <div class="col-md-8 bg-color-three-reasons section-column">
