--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,15 @@
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Contact Dan Morriss</title>
+    <!-- EmailJS -->
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("4mUTAHJ729LuZ8cSE");
+        })();
+    </script>
 </head>
 <body>
     <header>
@@ -59,15 +68,11 @@
                 <h3 class="contact-heading uppercase text-center ">Got a project in mind?</h3>
                 <h5 class="uppercase text-center">Let's work together!</h5>
                 <div class="center-form">
-                    <form>
-                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-                        <input type="email" name="email" id="email" class="form-control" placeholder="Email" required />
-                        <textarea name="projectsummary" id="projectsummary" rows="5" class="form-control" placeholder="Project description" required></textarea>
-                        <div class="form-row text-center">
-                            <div class="col">
-                                <button type="submit" class="btn btn-secondary">Send Project Request</button>
-                            </div>
-                        </div>
+                    <form onsubmit="return sendMail(this);">
+                        <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
+                        <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
+                        <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
+                        <button type="submit" class="btn btn-secondary center-block">Send Project Request</button>
                     </form>
                 </div>
             </div>
@@ -139,5 +144,6 @@
         </div>
 
     </footer>
+    <script src="assets/js/sendEmail.js"></script>
 </body>
 </html>
